# cryptaudit

./: README.md  SECURITY.md  cryptaudit.py  pyproject.toml
examples/: bad_crypto.py  good_crypto.py
