[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cryptaudit"
version = "0.1.0"
description = "Python Crypto Usage Auditor — find weak hashing, insecure random, deprecated crypto, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Kris Kimmerle"}]
keywords = ["crypto", "security", "audit", "hashing", "encryption", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]

[project.scripts]
cryptaudit = "cryptaudit:main"

[project.urls]
Homepage = "https://github.com/kriskimmerle/cryptaudit"
Issues = "https://github.com/kriskimmerle/cryptaudit/issues"
